[project]
name = "repo-guardian"
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [
    {name = "Alex Vega"}
]
dependencies = [
    "behave",
    "pytest",
    "pytest-xdist",
    "pytest-cov",
    "rich",
    "ruff",
    "coverage",
    "pygtrie",
    "textdistance",
    "networkx",
    "typer",
    "tox",
    "pdoc3",
    "pytest-html",
]

[tool.setuptools]
packages = ["guardian"]
package-dir = {"" = "src"}

[tool.pytest.ini_options]
pythonpath = ["src"]