[project]
name = "repo-guardian"
version = "1.0.0"
description = "A CLI/TUI utility for auditing and repairing Git repositories."
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [{name = "Alex Vega"}]
dependencies = [
    "typer",
    "pyinstaller",
    "networkx",
    "textdistance",
    "rich",
    "pytest",
    "pytest-cov",
    "pytest-xdist",
    "behave",
    "ruff",
    "coverage",
    "pdoc3",
    "black",
    "flake8-bugbear"
]

[project.scripts]
repo-guardian = "guardian.cli:app"

[build-system]
requires = ["setuptools", "wheel", "cython"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["guardian"]
package-dir = {"" = "src"}

[tool.pytest.ini_options]
pythonpath = ["src"]

[tool.poetry]
name = "repo-guardian"
version = "2.1"

packages = [
    { include = "guardian", from = "src" }
]